feat:melhoria na reprodução e na qualidade
